# advent-of-code-2020-ocaml

./: README.md  aoc20.opam  dune-project  esy.json
esy.lock/: index.json
lib/: dune  util.ml
lib/day_1/: dune  puzzle.ml
lib/day_BP/: dune  puzzle.ml
test/: dune  utils_test.ml
test/support/: test_runner.ml
